fix(EP-017): add V9 sub-sector IDs to CategoryId enum + update stale test counts
CategoryId enum was missing all 58 new sub-sector constants added by V9
migration (TECH_CYBR, HLTH_BIOT, FINL_BANK, etc.), causing
IllegalArgumentException in CategoryRepository when mapping DB rows to enum.

CategoryRepositoryIT expected hardcoded counts from before V9 (27/26) —
updated to reflect the actual seeded count (85 active, 84 when CASH excluded).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>